<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome"
    tools:context=".ui.activity.LoginActivity">

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_marginTop="120dp"
        android:layout_height="@dimen/dp_43"
        android:layout_marginStart="@dimen/dp_38"
        android:layout_marginEnd="@dimen/dp_38"
        android:background="@drawable/bg_edit"
        android:paddingStart="70dp"
        android:maxLength="11"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_color_333"
        android:hint="@string/phone_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/phone_number"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toTopOf="@id/et_phone"
        app:layout_constraintBottom_toBottomOf="@id/et_phone"
        app:layout_constraintStart_toStartOf="@id/et_phone"/>

    <EditText
        android:id="@+id/et_code"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_height="@dimen/dp_43"
        android:layout_marginStart="@dimen/dp_38"
        android:background="@drawable/bg_edit"
        android:paddingStart="70dp"
        android:maxLength="11"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_color_333"
        android:hint="@string/code_hint"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_code"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/code"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toTopOf="@id/et_code"
        app:layout_constraintBottom_toBottomOf="@id/et_code"
        app:layout_constraintStart_toStartOf="@id/et_code"/>

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="100dp"
        android:layout_height="@dimen/dp_43"
        android:layout_marginEnd="@dimen/dp_38"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_blue"
        android:gravity="center"
        android:text="@string/get_code"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_code"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:background="@drawable/bg_edit"
        android:layout_marginStart="@dimen/dp_38"
        android:layout_marginEnd="@dimen/dp_38"
        app:layout_constraintTop_toBottomOf="@id/et_code"/>

</android.support.constraint.ConstraintLayout>