<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_add_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white">

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/take_photo_add_card"
        android:layout_marginTop="44dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/bg_shoothead_portrait"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_camera"
        app:layout_constraintBottom_toBottomOf="@id/iv_camera"
        app:layout_constraintEnd_toEndOf="@id/iv_camera"
        app:layout_constraintStart_toStartOf="@id/iv_camera"
        android:drawableTop="@drawable/icon_camera"
        android:drawablePadding="6dp"
        android:text="@string/add_card_use_camera"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"/>

    <TextView
        android:id="@+id/tv_camera_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_camera"
        app:layout_constraintEnd_toEndOf="@id/iv_camera"
        app:layout_constraintStart_toStartOf="@id/iv_camera"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_333"
        android:textSize="@dimen/sp_12"
        android:text="@string/use_camera_desc"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/iv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/input_add_card"
        android:layout_marginTop="34dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/bg_shoothead_portrait"
        app:layout_constraintTop_toBottomOf="@id/tv_camera_desc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_input"
        app:layout_constraintBottom_toBottomOf="@id/iv_input"
        app:layout_constraintEnd_toEndOf="@id/iv_input"
        app:layout_constraintStart_toStartOf="@id/iv_input"
        android:drawableTop="@drawable/icon_compilecard"
        android:drawablePadding="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_input"
        app:layout_constraintEnd_toEndOf="@id/iv_input"
        app:layout_constraintStart_toStartOf="@id/iv_input"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_333"
        android:textSize="@dimen/sp_12"
        android:text="@string/use_hand_desc"
        android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>