<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="11dp"
    android:layout_marginTop="4dp"
    android:background="@drawable/bg_edit"
    android:padding="24dp">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textColor="@color/text_color_333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="0.5dp"
        android:layout_height="78dp"
        android:layout_marginStart="12dp"
        android:background="@color/line_color"
        android:contentDescription="@string/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="2dp"
        android:layout_height="15dp"
        android:layout_marginTop="9dp"
        android:background="@color/blue"
        android:contentDescription="@string/blue_line"
        app:layout_constraintLeft_toLeftOf="@id/iv_line"
        app:layout_constraintTop_toTopOf="@id/iv_line" />

    <ImageView
        android:layout_width="2dp"
        android:layout_height="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="9dp"
        android:background="@color/blue"
        android:contentDescription="@string/blue_line"
        app:layout_constraintBottom_toBottomOf="@id/iv_line"
        app:layout_constraintLeft_toLeftOf="@id/iv_line" />

    <TextView
        android:id="@+id/tv_company_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:text="@string/company"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/iv_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mobile_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/blue"
        android:text="@string/mobile"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_line"/>

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_color_333"
        app:layout_constraintStart_toEndOf="@id/iv_line"
        app:layout_constraintTop_toBottomOf="@id/tv_company_tag"/>

    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_color_333"
        app:layout_constraintStart_toEndOf="@id/iv_line"
        app:layout_constraintTop_toBottomOf="@id/tv_mobile_tag"/>

</android.support.constraint.ConstraintLayout>