<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome"
    tools:context=".ui.activity.ResultActivity">

    <LinearLayout
        android:layout_marginTop="33dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/dp_38">

            <ImageView
                android:id="@+id/iv_font"
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/img_card"
                android:contentDescription="@string/font_card"/>

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/img_card"
                android:contentDescription="@string/back_card"/>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginHorizontal="@dimen/dp_38">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:drawableEnd="@drawable/icon_compile"
                android:paddingEnd="12dp"
                android:paddingStart="@dimen/dp_72"
                android:textColor="@color/text_color_333"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:drawableEnd="@drawable/icon_compile"
                android:paddingEnd="12dp"
                android:paddingStart="@dimen/dp_72"
                android:textColor="@color/text_color_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintTop_toBottomOf="@id/et_name" />


            <EditText
                android:id="@+id/et_position"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:drawableEnd="@drawable/icon_compile"
                android:paddingEnd="12dp"
                android:paddingStart="@dimen/dp_72"
                android:textColor="@color/text_color_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintTop_toBottomOf="@id/et_company" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:drawableEnd="@drawable/icon_compile"
                android:paddingEnd="12dp"
                android:paddingStart="@dimen/dp_72"
                android:inputType="phone"
                android:textColor="@color/text_color_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintTop_toBottomOf="@id/et_position" />


            <EditText
                android:id="@+id/et_fax"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:drawableEnd="@drawable/icon_compile"
                android:paddingEnd="12dp"
                android:paddingStart="@dimen/dp_72"
                android:inputType="phone"
                android:textColor="@color/text_color_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintTop_toBottomOf="@id/et_mobile" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:drawableEnd="@drawable/icon_compile"
                android:paddingEnd="12dp"
                android:paddingStart="@dimen/dp_72"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintTop_toBottomOf="@id/et_fax" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:drawableEnd="@drawable/icon_compile"
                android:paddingEnd="12dp"
                android:paddingStart="@dimen/dp_72"
                android:textColor="@color/text_color_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/name"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@id/et_name"
                app:layout_constraintStart_toStartOf="@id/et_name"
                app:layout_constraintTop_toTopOf="@id/et_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/company"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@id/et_company"
                app:layout_constraintStart_toStartOf="@id/et_company"
                app:layout_constraintTop_toTopOf="@id/et_company" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/position"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@id/et_position"
                app:layout_constraintStart_toStartOf="@id/et_position"
                app:layout_constraintTop_toTopOf="@id/et_position" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/mobile"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@id/et_mobile"
                app:layout_constraintStart_toStartOf="@id/et_mobile"
                app:layout_constraintTop_toTopOf="@id/et_mobile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/fax"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@id/et_fax"
                app:layout_constraintStart_toStartOf="@id/et_fax"
                app:layout_constraintTop_toTopOf="@id/et_fax" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/email"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@id/et_email"
                app:layout_constraintStart_toStartOf="@id/et_email"
                app:layout_constraintTop_toTopOf="@id/et_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/address"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@id/et_address"
                app:layout_constraintStart_toStartOf="@id/et_address"
                app:layout_constraintTop_toTopOf="@id/et_address" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/bg_white"
            android:paddingHorizontal="@dimen/dp_38"
            android:paddingBottom="@dimen/dp_26"
            android:orientation="vertical">
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:background="@drawable/bg_edit"
                android:layout_marginTop="@dimen/dp_18"
                android:gravity="center"
                android:text="@string/save"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/blue"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_43"
                android:background="@drawable/bg_edit"
                android:layout_marginTop="@dimen/dp_18"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/blue"/>
            
        </LinearLayout>


    </LinearLayout>

</ScrollView>